--- a/My_Resume/css/content.css
+++ b/My_Resume/css/content.css
@@ -96,6 +96,19 @@ li{
     animation: bigger 1s;
 }
 
+.info li:nth-child(2)>div .play{
+    animation: bigger 1s infinite;
+}
+
+.map a{
+    border-radius: 50%;
+    display: block;
+    width: 90px;
+    height: 90px;
+    background-color: #69293b;
+    opacity: 0.7;
+}
+
 
 .head{
     background: #fff;
@@ -149,15 +162,16 @@ li{
 }
 
 @keyframes bigger {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    50% {
-        transform: scale(1.3);
-        opacity: 0.3;
-    }
-}
+     0% {
+         transform: scale(1);
+         opacity: 1;
+     }
+     50% {
+         transform: scale(1.3);
+         opacity: 0.3;
+     }
+ }
+
 @keyframes info_key{
     from{
         opacity: 0;
